--- a/configs/vae_1d.yaml
+++ b/configs/vae_1d.yaml
@@ -1,23 +1,22 @@
 model_params:
-  name: 'VanillaVAE'
-  in_channels: 3
-  latent_dim: 128
+  name: 'VAE1d'
+  in_dims: 16
+  latent_dim: 8
 
 
 data_params:
-  data_path: "Data/"
   train_batch_size: 64
   val_batch_size:  64
-  patch_size: 64
   num_workers: 4
+  data_dim: 16
 
 
 exp_params:
-  LR: 0.005
+  LR: 0.005  # 0.005
   weight_decay: 0.0
   scheduler_gamma: 0.95
-  kld_weight: 0.00025
-  manual_seed: 1265
+  kld_weight: 0.00025  # 0.00025
+  manual_seed: 77
 
 trainer_params:
   gpus: [0]
@@ -25,5 +24,4 @@ trainer_params:
 
 logging_params:
   save_dir: "logs/"
-  name: "VanillaVAE"
-  
+  name: "VAE1d"
