--- a/configs/vae_1d.yaml
+++ b/configs/vae_1d.yaml
@@ -1,18 +1,19 @@
 model_params:
   name: 'VAE1d'
-  in_dims: 16  # 16
-  latent_dim: 8  # 8
-  hidden_dims: [64, 32]  # [64, 32]
+  in_dims: 64  # 16
+  latent_dim: 16  # 8
+  hidden_dims: [128, 64, 32]  # [32, 16]
 
 data_params:
-  train_batch_size: 64  # 64
-  val_batch_size:  64
+  train_batch_size: 256  # 64
+  val_batch_size:  256  # 64
   num_workers: 4
-  data_dim: 16  # 16, should be the same as hidden_dims
+  data_dim: 64  # 16, should be the same as hidden_dims
+  data_num: 1000000 # 100000
 
 
 exp_params:
-  LR: 0.0005  # 0.005
+  LR: 0.005  # 0.005
   weight_decay: 0.0  # 0.0
   scheduler_gamma: 0.95
   kld_weight: 0.00025  # 0.00025
@@ -20,7 +21,7 @@ exp_params:
 
 trainer_params:
   gpus: [0]
-  max_epochs: 500
+  max_epochs: 200
 
 logging_params:
   save_dir: "logs/"
