--- a/configs/vae_1d.yaml
+++ b/configs/vae_1d.yaml
@@ -1,19 +1,21 @@
 model_params:
   name: 'VAE1d'
-  in_dims: 16  # 16
-  latent_dim: 16  # 8
-  hidden_dims: [32, 16]  # [32, 16]
+  in_dims: 64  # 16, 64
+  latent_dim: 64  # 8, 64
+  hidden_dims: [256, 128]  # [32, 16], [256, 128]
 
 data_params:
-  train_batch_size: 64  # 64
-  val_batch_size:  64  # 64
+  train_batch_size: 5012  # 64, 5012
+  val_batch_size:  5012  # 64, 5012
   num_workers: 4
-  data_dim: 16  # 16, should be the same as hidden_dims
-  data_num: 100000 # 100000
-
+  data_dim: 64  # 16, 64 should be the same as hidden_dims
+  data_num: 10000000 # 100000, 10000000
+  data_distribution: "gaussian"  # gaussian or beta
+  beta_parameters: [2, 5]  # [2, 5], [alpha, beta]
+  data_covariance_type: "half_dependent_half_independent" # independent or half_dependent_half_independent
 
 exp_params:
-  LR: 0.005  # 0.005
+  LR: 0.001  # 0.005
   weight_decay: 0.0  # 0.0
   scheduler_gamma: 0.95
   kld_weight: 0.00025  # 0.00025
@@ -21,7 +23,7 @@ exp_params:
 
 trainer_params:
   gpus: [0]
-  max_epochs: 60
+  max_epochs: 300
 
 logging_params:
   save_dir: "logs/"
